--- a/Shell/.tmux.conf
+++ b/Shell/.tmux.conf
@@ -22,10 +22,10 @@ set -sg escape-time 0
 
 set -g default-terminal "screen-256color"
 
-bind-key -n C-S-Up resize-pane -U 15
-bind-key -n C-S-Down resize-pane -D 15
-bind-key -n C-S-Left resize-pane -L 25
-bind-key -n C-S-Right resize-pane -R 25
+bind-key -n M-S-Up resize-pane -U 15
+bind-key -n M-S-Down resize-pane -D 15
+bind-key -n M-S-Left resize-pane -L 25
+bind-key -n M-S-Right resize-pane -R 25
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
