--- a/Shell/.tmux.conf
+++ b/Shell/.tmux.conf
@@ -49,3 +49,31 @@ bind f command-prompt -p "(find-window)" "find-window -N '%%'"
 bind r source-file ~/.tmux.conf \; display "Configuration reloaded."
 
 bind S set synchronize-panes
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @resurrect-capture-pane-contents 'on'
+
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set-window-option -g status-left " #S "
+set-window-option -g status-left-fg black
+set-window-option -g status-left-bg white
+
+set-window-option -g status-right " %H:%M %d-%b-%y "
+set-window-option -g status-right-fg black
+set-window-option -g status-right-bg white
+
+set-window-option -g window-status-format " #I: #W "
+
+set-window-option -g window-status-current-format " #I: #W "
+set-window-option -g window-status-current-fg green
+set-window-option -g window-status-current-bg black
+set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
